spring-boot-kafka-example/src/kubernetes/service-users.yml
kind: Service
apiVersion: v1
metadata:
  name: users-service
spec:
  selector:
    run: users-service
  ports:
    - name: port1
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: NodePort
